--- a/trunk/net.stickycode.ws/sticky-ws-testutils/pom.xml
+++ b/trunk/net.stickycode.ws/sticky-ws-testutils/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.20</version>
+		<version>1.21</version>
 	</parent>
 
 	<groupId>net.stickycode.ws</groupId>
@@ -21,7 +21,7 @@
 			<artifactId>mockwire-guice3</artifactId>
 			-->
 			<artifactId>mockwire-spring30</artifactId>
-			<version>[6.2,7)</version>
+			<version>[6.4,7)</version>
 			<scope>test</scope>
 		</dependency>
 
