--- a/trunk/net.stickycode/sticky-coercion-resource/pom.xml
+++ b/trunk/net.stickycode/sticky-coercion-resource/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.20</version>
+		<version>1.21</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -29,22 +29,22 @@
 		<dependency>
 			<groupId>net.stickycode</groupId>
 			<artifactId>sticky-coercion</artifactId>
-			<version>[4.1,5)</version>
+			<version>[4.6,5)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode</groupId>
 			<artifactId>sticky-stereotype</artifactId>
-			<version>[1.13,2)</version>
+			<version>[1.16,2)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode</groupId>
 			<artifactId>sticky-resource</artifactId>
-			<version>[1,2)</version>
+			<version>[1.4,2)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode</groupId>
 			<artifactId>sticky-reflector</artifactId>
-			<version>[1.9,2)</version>
+			<version>[1.10,2)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
@@ -58,7 +58,7 @@
 			<version>[2.1,3)</version>
 			-->
 			<artifactId>mockwire-spring30</artifactId>
-			<version>[6,7)</version>
+			<version>[6.4,7)</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
