--- a/net.stickycode.configured/sticky-configuration-generator-properties/pom.xml
+++ b/net.stickycode.configured/sticky-configuration-generator-properties/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--	Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.20</version>
+		<version>1.21</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
 	<packaging>jar</packaging>
 
 	<name>sticky-configuration-generator-properties</name>
-	<description />
+	<description/>
 	<inceptionYear>2010</inceptionYear>
 	<url>http://www.StickyCode.net/configured/sticky-configuration-generator-properties/</url>
 
@@ -34,19 +34,19 @@
 		<dependency>
 			<groupId>net.stickycode.configured</groupId>
 			<artifactId>sticky-configured-api</artifactId>
-			<version>[3.2,4)</version>
+			<version>[3.4,4)</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mockwire</groupId>
 			<artifactId>mockwire-spring30</artifactId>
-			<version>[5.1,7)</version>
+			<version>[6.4,7)</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode</groupId>
 			<artifactId>sticky-metadata-reflective</artifactId>
-			<version>[1.2,2)</version>
+			<version>[1.4,2)</version>
 		</dependency>
 	</dependencies>
 </project>
