--- a/net.stickycode.configured/sticky-configuration-generator-xml/pom.xml
+++ b/net.stickycode.configured/sticky-configuration-generator-xml/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--	Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.20</version>
+		<version>1.21</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
 	<packaging>jar</packaging>
 
 	<name>sticky-configuration-generator-xml</name>
-	<description></description>
+	<description/>
 	<inceptionYear>2010</inceptionYear>
 	<url>http://www.StickyCode.net/configured/sticky-configuration-generator-xml/</url>
 
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>net.stickycode.configured</groupId>
 			<artifactId>sticky-configured-api</artifactId>
-			<version>[2,3)</version>
+			<version>[2.4,3)</version>
 		</dependency>
 
 		<dependency>
