--- a/net.stickycode.scheduled/sticky-scheduled-spring25/pom.xml
+++ b/net.stickycode.scheduled/sticky-scheduled-spring25/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2011 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.20</version>
+		<version>1.21</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-logging-deploy</artifactId>
-			<version>[1.2,2)</version>
+			<version>[1.4,2)</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>net.stickycode.scheduled</groupId>
 			<artifactId>sticky-scheduled</artifactId>
-			<version>[1.2,2)</version>
+			<version>[1.12,2)</version>
 		</dependency>
 	</dependencies>
 </project>
