--- a/net.stickycode/sticky-stereotype/pom.xml
+++ b/net.stickycode/sticky-stereotype/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-api</artifactId>
-		<version>1.7</version>
+		<version>1.8</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-unittest</artifactId>
-			<version>[1.6,2)</version>
+			<version>[1.7,2)</version>
 			<scope>test</scope>
 		</dependency>
 
