--- a/net.stickycode.stile/stile-version/pom.xml
+++ b/net.stickycode.stile/stile-version/pom.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- /** * Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. * * This program is licensed to you under
-	the Apache License Version 2.0, * and you may not use this file except in compliance with the Apache License Version 2.0. * You may obtain
-	a copy of the Apache License Version 2.0 at http://www.apache.org/licenses/LICENSE-2.0. * * Unless required by applicable law or agreed
-	to in writing, * software distributed under the Apache License Version 2.0 is distributed on an * "AS IS" BASIS, WITHOUT WARRANTIES OR
-	CONDITIONS OF ANY KIND, either express or implied. * See the Apache License Version 2.0 for the specific language governing permissions
-	and limitations there under. */ -->
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.20</version>
+		<version>1.21</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -28,28 +20,23 @@
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-logging-deploy</artifactId>
-			<version>[1.2,3)</version>
+			<version>[1.4,3)</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode</groupId>
 			<artifactId>sticky-exception</artifactId>
-			<version>[1.3,2)</version>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-resource</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>[1.7,2)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode</groupId>
 			<artifactId>sticky-stereotype</artifactId>
-			<version>[1.13,2)</version>
+			<version>[1.16,2)</version>
 		</dependency>
 		<dependency>
-			<groupId>net.stickycode.mockwire</groupId>
+			<groupId>org.mockwire</groupId>
 			<artifactId>mockwire-spring30</artifactId>
-			<version>[5.1,6)</version>
+			<version>[6.4,7)</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
